--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,7 @@
     "Yiran Sheng <shengyiran@gmail.com>"
   ],
   "description": "Angular Autocompleter based on Twitter Bloodhound",
-  "main": "dist/js/ngAtp-bundle.js",
+  "main": "dist/js/ng-atp-bundle.js",
   "keywords": [
     "Angular",
     "Bloodhound",
