--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,7 @@
     "examples"
   ],
   "dependencies": {
-    "angular": "~1.2.22"
+    "angular": ">=1.3.8"
   },
   "repository": {
     "type": "git",
